[FIX] intropage z-index 수정

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -318,7 +318,6 @@ a {
 
 #intro-persona-title {
     margin-bottom: 2rem;
-    font-family: 'Noto Sans KR', sans-serif;
     color: #535353;
 }
 
@@ -379,7 +378,6 @@ a {
     border-radius: 1rem;
     padding-left: 3.5rem;
     padding-right: 3.5rem;
-    font-family: 'Noto Sans KR', sans-serif;
     box-shadow: 2px 4px 10px 0px rgb(82 82 82 / 30%);
 }
 
@@ -407,7 +405,6 @@ a {
 }
 
 #intro-service {
-    font-family: 'Noto Sans KR', sans-serif;
     padding-top: 8rem;
     margin-top: 10rem;
 }
